manifests/ns.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: symfexit-staging
  labels:
    shared-gateway-access: "true"
