manifests/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: symfexit
  namespace: symfexit-staging
  labels:
    app: symfexit
spec:
  replicas: 3
  selector:
    matchLabels:
      app: symfexit
  template:
    metadata:
      labels:
        app: symfexit
    spec:
      containers:
      - name: symfexit
        image: ghcr.io/roodjong/symfexit:main
        ports:
        - containerPort: 8000
        args:
        - uvicorn
        - symfexit.asgi:application
        - --host
        - 0.0.0.0
        volumeMounts:
        - name: symfexit-data
          mountPath: /data
      volumes:
      - name: symfexit-data
        persistentVolumeClaim:
          claimName: symfexit-data
---
apiVersion: v1
kind: Service
metadata:
  name: symfexit
  namespace: symfexit-staging
spec:
  selector:
    app: symfexit
  ports:
    - protocol: TCP
      port: 8000
      targetPort: 8000
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: symfexit-nginx
  namespace: symfexit-staging
  labels:
    app: symfexit-nginx
spec:
  replicas: 3
  selector:
    matchLabels:
      app: symfexit-nginx
  template:
    metadata:
      labels:
        app: symfexit-nginx
    spec:
      containers:
      - name: nginx
        image: ghcr.io/roodjong/symfexit:main
        args:
        - nginx
        - -c
        - /etc/nginx/nginx.conf
        volumeMounts:
        - name: symfexit-nginx-config
          mountPath: /etc/nginx/nginx.conf
          subPath: nginx.conf
      volumes:
      - name: symfexit-nginx-config
        configMap:
          name: symfexit-nginx-config
---
# Service for symfexit-nginx
apiVersion: v1
kind: Service
metadata:
  name: symfexit-nginx
  namespace: symfexit-staging
spec:
  selector:
    app: symfexit-nginx
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
---
apiVersion: gateway.networking.k8s.io/v1beta1
kind: HTTPRoute
metadata:
  name: symfexit-nginx
  namespace: symfexit-staging
spec:
  parentRefs:
    - name: eg
      namespace: default
  hostnames:
    - "symfexit-staging.yele.dev"
  rules:
    - backendRefs:
        - group: ""
          kind: Service
          name: symfexit-nginx
          port: 80
          weight: 1
      matches:
        - path:
            type: PathPrefix
            value: /
